--- a/index.html
+++ b/index.html
@@ -7,3 +7,9 @@
     title="YouTube video player" frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+    <styles class="css"></styles>
+<body>
+    color withe;
+</body>
