--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Palmeiras Campeão. Todos os direitos reservados.</p>
+        <p>&copy; palameiras é pai do são do são paulo.</p>
     </footer>
 </body>
 </html>
