--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         </div>
     </main>
 
+    <img src="lib.webp">
+
     <footer>
         <p>palameiras é pai do são paulo.</p>
     </footer>
