--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             width: 100%;
             bottom: 0;
         }
+        img{
+            display: flex;
+            justify-content: center;
+        }
     </style
 </head>
 <body>
@@ -58,7 +62,7 @@
         <h1>Trajetória do Palmeiras até o Título</h1>
         <p>Acompanhe a emocionante jornada do Palmeiras rumo ao título da Libertadores de 2020. Uma campanha inesquecível que culminou com o terceiro título do clube na competição mais importante da América do Sul.</p>
 
-        
+
 
     <img src="lib.webp">
 
