--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <img src="lib.webp">
 
     <footer>
-        <p>palameiras é pai do são paulo.</p>
+        <p>palmeiras é pai do são paulo.</p>
     </footer>
 </body>
 </html>
