--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             width: 100%;
             bottom: 0;
         }
-        img{
+        img{src="lib.webp" }
             display: flex;
             justify-content: center;
         }
