--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             width: 100%;
             bottom: 0;
         }
-        img{src="lib.webp" }
+        img{
             display: flex;
             justify-content: center;
         }
