--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             width: 100%;
             bottom: 0;
         }
-        img{
+        main{
             display: flex;
             justify-content: center;
         }
@@ -65,7 +65,7 @@
 
 
     <img src="lib.webp">
-
+    </main>
     <footer>
         <p>palmeiras é pai do são paulo.</p>
     </footer>
