--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             width: 100%;
             bottom: 0;
         }
-        main{
+        .teste{
             display: flex;
             justify-content: center;
         }
@@ -61,11 +61,11 @@
     <main>
         <h1>Trajetória do Palmeiras até o Título</h1>
         <p>Acompanhe a emocionante jornada do Palmeiras rumo ao título da Libertadores de 2020. Uma campanha inesquecível que culminou com o terceiro título do clube na competição mais importante da América do Sul.</p>
-
-
-
-    <img src="lib.webp">
     </main>
+
+    <div class = "teste">
+    <img src="lib.webp">
+    </div>
     <footer>
         <p>palmeiras é pai do são paulo.</p>
     </footer>
