--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             justify-content: center;
             align-items: center;
             margin-top: 20px;
-        }
+        } 
         iframe {
             width: 80%;
             height: 450px;
             max-width: 800px;
-            border: none;
+            border: none; 
         }
         footer {
             background-color: #006400;
-            color: white;
+            color: black;
             text-align: center;
             padding: 10px;
             position: fixed;
