--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
         footer {
             background-color: #006400;
-            color: black;
+            color: white;
             text-align: center;
             padding: 10px;
             position: fixed;
